<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pylearn</string>
    <string name="whypython"><![CDATA[\tWHY PYTHON?\t\t\t\t\t\t\t\t\t]]></string>
    <string name="des"><![CDATA[ 1.\tPython has the ability to easily work on different platforms.\n\n
2.\tPython has a simple syntax similar to the English language.\n\n
3.\tPython has syntax that allows developers to write programs with fewer lines than some other programming languages.\n\n
4.\tPython runs on an interpreter system, meaning that code can be executed as soon as it is written. This means that prototyping can be very quick.\n\n
5.\tPython can be treated in a procedural way, an object-orientated way or a functional way.]]></string>
    <string name="whatpython">WHAT CAN PYTHON DO ?</string>
    <string name="descriptive">1.\tPython can be used on a server to create WEB APPLICATIONS.\n\n
2.\tCan be used alongside software to create workflows.\n\n
3.\tConnects to database systems. It can also read and modify files.\n\n
4.\tPython can be used to handle big data and perform complex mathematics.\n\n
5.\tPython can be used for rapid prototyping, or for production-ready software development.</string>
    <string name="syntax">SYNTAX AND COMMENTS</string>
    <string name="syntaxhead">SYNTAX</string>
    <string name="syntaxdes">\t\t#printing hello world\n
    \t\tprint(\"Hello,World!\")
    </string>
    <string name="comment">COMMENTS</string>
    <string name="comments_description" tools:ignore="StringEscaping">\t\t 1) SINGLE LINE COMMENTS \n\n \t\t -&gt;Single line comments are denoted by #\n \t\tProgram :\n
    \t\t #This is a comment in python\n \t\t print(\&quot;Hello,World!\&quot;)\n\n\n \t\t 2) MULTILINE COMMENTS \n\n \t\t -> Multiline comments are denoted by &quot;&quot;&quot;(triple quotes)\n\t\t Program :\n
    \t\t &quot;&quot;&quot;This is a comment
written in
more than just one line&quot;&quot;&quot;\n\t\tprint(\"Hello,World!\")\n\n\n
</string>
    <string name="variable">VARIABLES</string>
    <string name="variablehead">-->Variables are containers for storing data values.\n-->Python has \"NO\" command for declaring a variable.\n-->A variable is created the moment you first assign a value to it.</string>
    <string name="rulehead">RULES FOR PYTHON VARIABLES:</string>
    <string name="rulebody">1.Must start with a letter or the underscore character\n
    2.Cannot start with a number.\n3.Can only contain alpha-numeric characters and underscores (A-z, 0-9, and _ )\n4.Case-sensitive (age, Age and AGE are three different variables)</string>
    <string name="examplevar">EXAMPLE PROGRAMS</string>
    <string name="exm2">var1=15\nvar2=123.456\nvar3=\"Hello pylearn\" \nprint(var1,\'\',var2,\'\',var3)</string>
    <string name="funct7a">For more info :</string>
    <string name="mod">MODULES</string>
    <string name="mod1">->Modules refer to a file containing Python statements and definitions.\n\n->A file containing Python code, for e.g.: example.py, is called a module and its module name would be example.\n\n->We use modules to break down large programs into small manageable and organized files.\n\n->\Furthermore, modules provide reusability of code.\n\n->We can define our most used functions in a module and import it, instead of copying their definitions into different programs.\n\n<big>PROGRAM :</big></string>
    <string name="mod2">#module,calc.py\ndef add(x,y):\n\t\treturn (x+y)\n\ndef subtract(x,y):\n\t\treturn (x-y)\n\nimport calc\n\ncalc.add(10,2)</string>
    <string name="mod3"><big>OUTPUT:</big>\n12\n\n->Here the output will only be shown if there exists a file \"calc.py\" which is created first and then imported.</string>
    <string name="mod5"><a href="https://www.w3schools.com/python/python_modules.asp">WEB INFO</a></string>
    <string name="mod6"><a href="https://www.youtube.com/watch?v=1RuMJ53CKds">YOUTUBE</a></string>
    <string name="pack">PACKAGES</string>
    <string name="pack1">->Python package is a collection of modules in directories that give a package hierarchy.\n\n->More elaborately, python packages are a way of structuring python\’s module by using \“dotted module names\”.\n\n->So A.B actually indicates that B is a sub module which is under a package named A.\n\n<b>Importing modules from package:</b>\n->We can import modules from packages using the dot (.) operator.\n\n<big>PROGRAM :</big></string>
    <string name="pack2">#code 1\n# Python code to Modules\nclass Bmw:\n#create a constructor for class\n#add members to it,models\n\t\tdef __init__(self):\n\t\t\t\tself.models=[\'i8\',\'x1\',\'x5\',\'x6\']\n\n
        \t\t# A normal print funct\n\t\tdef outModels(self):\n\t\t\t\tprint(\'These are the available models for BMW\')\n\t\t\t\tfor model in self.models:\n\t\t\t\t\t\tprint(\'t%s\'% model)\n\n#code 2\n#illustrate the Module\n
        class Audi:\n\n#create a constructor for class\n#add members to it,models\n\t\tdef __init__(self):\n\t\t\t\tself.models=[\'q7\',\'a\',\'a8\',\'a3\']\n\n#normal print function\n\t\tdef outModels(self):\n\t\t\t\tprint(\'These are the available models for Audi\')\n
        \t\t\t\tfor model in self.models:\n\t\t\t\t\t\tprint(\'\t%s\' % model)\n\n#code 3\n#illustrate the Module\nclass Nissan:\n#create a constructor\n#add members\n\t\tdef __init__(self):\n\t\t\t\tself.models=[\'altima\',\'370z\',\'cube\',\'rogue\']\n\n
        #normal print function\n\t\tdef outModels(self):\n\t\t\t\tprint(\'These are the available models for Nissan\')\n\t\t\t\tfor model in self.models:\n\t\t\t\t\t\tprint(\'\t%s\'% model)\n\n
        from codes 1,2,3\nfrom Bmw import Bmw\nfrom Audi import Audi\nfrom Nissan import Nissan\n\nthe code generated is as shown below\n# Import classes from brand new package\nfrom Cars import Bmw\nfrom Cars import Audi\nfrom Cars import Nissan\n\n# Create an object of Bmw class\n#call its method\nModBMW = Bmw()\n
ModBMW.outModels()\n\n# Create an object of Audi class\n#call its method\nModAudi = Audi()\nModAudi.outModels()\n\n# Create an object of Nissan class\n#call its method\nModNissan = Nissan()\nModNissan.outModels()</string>
    <string name="pack5"><a href="https://www.programiz.com/python-programming/package">WEB INFO</a></string>
    <string name="pack6"><a href="https://www.youtube.com/watch?v=gDlQoqLTt98">YOUTUBE</a></string>
    <string name="get">GETTERS AND SETTERS</string>
    <string name="get1">->Getters and setters are not the same as those in other object-oriented programming languages.The main purpose of using getters and setters in object-oriented programs is to ensure data encapsulation.\n\n->Private variables in python are not actually hidden fields like in other object oriented languages.\n\n->Getters and Setters in python are often used to add validation logic around getting and setting a value.\n\n<big>PROGRAM :</big></string>
    <string name="get2">class year_graduated:\n\t\tdef __init__(self, year=0):\n\n\t\t\t\tself._year = year\n\n# getter method\n\t\tdef get_year(self):\n\t\t\t\treturn self._year\n
        # setter method\n\t\tdef set_year(self, a):\n\t\t\t\tself._year = a\n\ngrad_obj = year_graduated()\n# Before using setter\nprint(grad_obj.get_year())\n\n#After using setter\ngrad_obj.set_year(2019)</string>
    <string name="get3"><big>OUTPUT :</big>\n\n0\n2019</string>
    <string name="get5"><a href="https://www.geeksforgeeks.org/getter-and-setter-in-python/">WEB INFO</a></string>
    <string name="get6"><a href="https://www.youtube.com/watch?v=OtnTWta0HYs">YOUTUBE</a></string>
    <string name="fime"><a href="https://www.w3schools.com/python/python_file_handling.asp">WEB INFO</a></string>
    <string name="filemo">FILE MODES</string>
    <string name="filemo1"><big>MODES :</big>\n\n\n<big>\t\t\'r\'</big>\n->Open a file for reading. (default)\n\n
<big>\t\t\'w\'</big>\n->Open a file for writing. Creates a new file if it does not exist or truncates the file if it exists.\n\n
<big>\t\t\'x\'</big>\n->Open a file for exclusive creation. If the file already exists, the operation fails.\n\n
<big>\t\t\'a\'</big>\n->Open for appending at the end of the file without truncating it. Creates a new file if it does not exist.\n\n
<big>\t\t\'t\'</big>\n->Open in text mode. (default)\n\n
<big>\t\t\'b\'</big>\n->Open in binary mode.\n\n
<big>\t\t\'+\'</big>\n->Open a file for updating (reading and writing).\n</string>
    <string name="fiil"><a href="https://www.youtube.com/watch?v=e4VPjkd-QA4">YOUTUBE</a></string>
    <string name="faqq1"><b>\nIs Python case sensitive when dealing with identifiers?</b>\na)yes<b>\t\t(CORRECT)</b>\nb) no\nc) machine dependent\nd) none of the mentioned\nExplanation: Case is always significant.\n
</string>
    <string name="faqq2">\n<b>Which of the following is an invalid variable?</b>\na) my_string_1\nb) 1st_string\t\t<b>(CORRECT)</b>\nc) foo\nd) _\nExplanation: Variable names should not start with a number.\n
</string>
    <string name="faq3">\n<b>All keywords in Python are in _________</b>\na) lower case\nb) UPPER CASE\nc) Capitalized\nd) None of the mentioned\t\t<b>(CORRECT)</b>\n
</string>
    <string name="faq4">\n<b>Which of the following is an invalid statement?</b>\na) abc = 1,000,000\nb) a b c = 1000 2000 3000\t\t<b>(CORRECT)</b>\nc) a,b,c = 1000, 2000, 3000\nd) a_b_c = 1,000,000\n</string>
<string name="faq5">\n<b>Which of the following cannot be a variable?</b>\na) __init__\nb)in\t\t<b>(CORRECT)</b>\nc) it\nd) on\nExplanation: in is a keyword.\n</string>
<string name="faq6">.\n<b> Which of the following results in a SyntaxError?</b>\na) \'\”Once upon a time…\”, she said.\’\nb) \“He said, \‘Yes!\'\”\nc) 3\’ \t\t<b>(CORRECT)</b>\nd) ”’That’s okay”’\nExplanation: Carefully look at the colons.\n
</string>
<string name="faq7">\n<b>Select all options that print.</b>\n<b>hello-how-are-you</b>\na) print(\‘hello\’, \‘how\’, \‘are\’, \‘you\’)\nb) print(\‘hello\’, \‘how\’, \‘are\’, \‘you\’ + \‘-\‘ * 4)\nc) print(\‘hello-\‘ + \‘how-are-you\’)\t\t<b>(CORRECT)</b>\nd) print(\‘hello\’ + \‘-\‘ + \‘how\’ + \‘-\‘ +\‘are\’ + \‘you\’)\n</string>
<string name="faq8">\n<b>What is the return value of trunc()?</b>\na) int)\t\t<b>(CORRECT)</b>\nb) bool\nc) float\nd) None\n</string>
    <string name="faq9">\n<b>What is the order of precedence in python?</b>\ni) Parentheses\nii) Exponential\niii) Multiplication\niv) Division\nv) Addition\nvi) Subtraction\na) i,ii,iii,iv,v,vi\t\t<b>(CORRECT)</b>\nb) ii,i,iii,iv,v,vi\nc) ii,i,iv,iii,v,vi\nd) i,ii,iii,iv,vi,v\n</string>
<string name="faq10">\n<b>What is the output of this expression, 3*1**3?</b>\na) 27\nb) 9\nc) 3<b>(CORRECT)</b>\nd) 1\n</string>
<string name="faq11">\n<b>Which of the following operators has its associativity from right to left?</b>\na) +\nb) //\nc) %\nd) **\n<b>(CORRECT)</b>\n</string>
    <string name="faq12">\n<b>The expression 2**2**3 is evaluates as: (2**2)**3.</b>\na) True\nb) False\n\t\t<b>(CORRECT)</b>\nExplanation: The value of the expression (2**2)**3 = 4**3 = 64.\n
</string>
    <string name="faq13">\n<b>What will be the output of the following Python code?</b>\n\tx = [\'ab\',\'cd\']\n\t\tfor i in x:\n\t\t\t\ti.upper()\nprint(x)\na) [‘ab’, ‘cd’]\t\t<b>(CORRECT)</b>\nb) [\‘AB\’, \‘CD\’]\nc) [None, None]\nd) none of the mentioned\n</string>
<string name="faq14">. \n<b>What will be the output of the following Python code?</b>\nx = [\'ab\', \'cd\']\nfor i in x:\n\t\tx.append(i.upper())\nprint(x)\na) [\‘AB\’, \‘CD\’]\nb) [\‘ab\’, \‘cd\’, \‘AB\’, \‘CD\’]\nc) [\‘ab\’, \‘cd\’]\nd) none of the mentioned\n]\t\t<b>(CORRECT)</b>\nExplanation: The loop does not terminate as new elements are being added to the list in each iteration.\n</string>
<string name="faq15">\n<b>What will be the output of the following Python code?</b>\ni = 5\nwhile True:\n\t\tif i%0011 == 0:\n\t\t\t\tbreak\n\t\tprint(i)\n\t\ti += 1\na) 5 6 7 8 9 10\nb) 5 6 7 8\n\t\t<b>(CORRECT)</b>\nc) 5 6\nd) error\nExplanation: 0011 is an octal number.\n</string>
</resources>