<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".faq">

    <TextView
        android:id="@+id/faqq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:text="FAQ'S"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
      />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/faqq" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/X1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faqq1"
                android:textSize="20sp"
                android:typeface="serif"
                android:background="@drawable/edittext"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faqq2"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq3"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq4"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/X5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq5"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq6"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq7"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq8"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq9"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq10"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq11"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq12"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq13"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq14"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/X15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/faq15"
                android:textSize="20sp"
                android:background="@drawable/edittext"
                android:typeface="serif"
                android:textColor="#000000"/>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>