<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module">

    <TextView
        android:id="@+id/mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edittext"
        android:layout_marginTop="20sp"
        android:text="@string/mod"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mod"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/mod1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/mod1"
                android:textSize="20sp"

                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/mod2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10sp"
                android:text="@string/mod2"
                android:textSize="20sp"

                android:typeface="serif"
                android:layout_below="@+id/mod1"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/mod3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/mod3"
                android:textSize="20sp"

                android:typeface="serif"
                android:layout_below="@+id/mod2"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/mod4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/funct7a"
                android:textSize="20sp"

                android:typeface="serif"
                android:textColor="#000000"
                android:layout_below="@+id/mod3" />
            <TextView
                android:id="@+id/mod5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"
                android:layout_marginTop="20sp"
                android:text="@string/mod5"
                android:textSize="30sp"

                android:typeface="serif"
                android:textColor="#357DE8"

                android:layout_below="@+id/mod4" />
            <TextView
                android:id="@+id/mod6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"
                android:layout_marginTop="20sp"
                android:text="@string/mod6"
                android:textSize="30sp"

                android:typeface="serif"
                android:textColor="#357DE8"

                android:layout_below="@+id/mod5" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>