<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getters">

    <TextView
        android:id="@+id/get"
        android:layout_width="match_parent"
        android:layout_height="40sp"

        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edittext"
        android:layout_marginTop="20sp"
        android:text="@string/get"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/get"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/get1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/get1"
                android:textSize="20sp"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/get2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10sp"
                android:text="@string/get2"
                android:textSize="20sp"

                android:typeface="serif"
                android:layout_below="@+id/get1"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/get3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/get3"
                android:textSize="20sp"
                android:typeface="serif"
                android:layout_below="@+id/get2"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/get4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/funct7a"
                android:textSize="20sp"
                android:typeface="serif"
                android:textColor="#000000"
                android:layout_below="@+id/get3" />
            <TextView
                android:id="@+id/get51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"

                android:text="@string/get5"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/get4" />
            <TextView
                android:id="@+id/get61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"

                android:text="@string/get6"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/get51" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
