<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".packages">

    <TextView
        android:id="@+id/pack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edittext"
        android:layout_marginTop="20sp"
        android:text="@string/pack"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pack"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/pack1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/pack1"
                android:textSize="20sp"
                android:typeface="serif"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/pack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10sp"
                android:text="@string/pack2"
                android:textSize="20sp"
                android:typeface="serif"
                android:layout_below="@+id/pack1"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/pack4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/funct7a"
                android:textSize="20sp"

                android:typeface="serif"
                android:textColor="#000000"
                android:layout_below="@+id/pack2" />
            <TextView
                android:id="@+id/pack5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"
                android:layout_marginTop="20sp"
                android:text="@string/pack5"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/pack4" />
            <TextView
                android:id="@+id/pack6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"
                android:layout_marginTop="20sp"
                android:text="@string/pack6"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/pack5" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>