<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filemo">

    <TextView
        android:id="@+id/trye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/edittext"
        android:layout_marginTop="20sp"
        android:text="@string/filemo"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/trye"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <TextView
                android:id="@+id/trye1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/filemo1"
                android:textSize="20sp"

                android:typeface="serif"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/get4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp"
                android:text="@string/funct7a"
                android:textSize="20sp"

                android:typeface="serif"
                android:textColor="#000000"
                android:layout_below="@+id/trye1" />
            <TextView
                android:id="@+id/get5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"

                android:text="@string/fime"
                android:textSize="30sp"

                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/get4" />
            <TextView
                android:id="@+id/get6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittext"
                android:layout_marginTop="20sp"
                android:text="@string/fiil"
                android:textSize="30sp"

                android:typeface="serif"
                android:textColor="#357DE8"
                android:layout_below="@+id/get5" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
